HelloUltraviolet/Fixtures/RejectedSource/Expressions/RecordFieldNameSet/Source/Main.uv
//! Rejected record construction specimen for record field-name set checking.

public record RecordFieldNameSetPayload {
    public first: i32
    public second: i32
}

public procedure recordFieldNameSetReference() -> RecordFieldNameSetPayload {
    return RecordFieldNameSetPayload {
        first: 1
    }
}
